--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,27 @@
-body{
+html, body{
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+
+canvas{
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.info{
+    display: block;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    padding: 6px;
+    color: white;
+    text-align: center;
+}
+
+a{
+    color: #8dc3f7;
 }
